--- a/index.html
+++ b/index.html
@@ -136,13 +136,7 @@
 
                             <div class="swiper-slide">
                                 <section class="about-us">
-                                    <div class="left">
-                                        <h3 class="about-title">About Us</h3>
-                                        <p>At 9 Oceania, we navigate the digital frontier with innovation and disrupt the norms to set trends. Merging art with technology, and data with creativity, we architect growth and transformative strategies that elevate brands.  We’re all about building amazing websites, getting your site noticed on search engines, and making sure you're a hit on social media. Imagine us setting sail together, where there’s a whole ocean of possibilities and every wave brings us closer to your goals. Join us, and let’s make your brand as limitless as the ocean.</p>
-                                    </div>
-                                    <div class="right">
-                                        <img src="assets/about.gif" alt="">
-                                    </div>
+                                    <video autoplay muted src="assets/WhatsApp Video 2024-04-19 at 1.27.13 PM.mp4"></video>
                                 </section>
                             </div>
 
@@ -168,21 +162,11 @@
                                 </section>
                             </div>
 
-                            <!-- <div class="swiper-slide">
-
-                            </div>
-
-                            <div class="swiper-slide more-posts-portfolio">
-                                <div class="portfolio-slider-load-more">
-                                    <span class="more-portfolio-posts">LOAD MORE</span>
-                                </div>
-                            </div> -->
-
                         </div>
+                        <a class="contact-btn" href="getintouch.html">Get in touch</a>
                     </div>
                 </div>
-                <div class="clear"></div>
-            </div> <!-- End Page Content Holder -->            
+            </div>             
         </div>
 
         <!--Load JavaScript-->
