--- a/career.html
+++ b/career.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>9Oceania | Expression of interest</title>
+    <title>9Oceania | Careers</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="Template by CocoBasic" />
     <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
@@ -102,23 +102,22 @@
                 </a>
             </div> 
             
-            <div class="contact-container">
-                <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
-                    <div class="contact-title">
-                        <h2>Expression of Interest</h2>
-                        <hr>
+            <div class="career">
+                <div class="career-bg"></div>
+                <div class="career-info">
+                    <h3 class="career-title">Careers</h3>
+                    <div class="career-content">
+                        <h5 class="content-title">Work With Us</h5>
+                        <p>Join the 9 Oceania Team, we're in the business of elevating digital landscapes by delivering unparalleled experiences, spreading joy, and ensuring brilliance in the digital realm.</p>
+                        <p>We pride ourselves on fostering a vibrant work culture that recognizes individual contributions, offers attractive remuneration packages, and facilitates career growth within a leading-edge digital marketing firm.</p>
+                        <p>Prospective candidates should forward a cover letter and resume.</p>
+                        <p>We are always on the lookout for talented staff. Apply here to be considered for future opportunities.</p>
                     </div>
-                    <input type="hidden" name="access_key" value="36d3e489-94df-4c5a-b981-9d2c7f9351ad">
-                    <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
-                    <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
-                    <input type="tel" name="tel" placeholder="Your Number" class="contact-inputs" required>
-                    <textarea name="message" placeholder="Your Message" class="contact-inputs textarea" required></textarea>
-                    <label for="resume">Upload your resume</label>
-                    <input type="file" name="attachment" id="attachment" class="contact-inputs" accept=".pdf" required>
-                    <label for="resume">Upload your cover letter</label>
-                    <input type="file" name="attachment" id="attachment" class="contact-inputs" accept=".pdf" required>
-                    <button type="submit">Submit</button>
-                </form>
+                    <div class="button">
+                        <a href="contact.html">Expression of Interest</a>
+                    </div>
+                </div>
+    
             </div>
 
         </div>
