--- a/getintouch.html
+++ b/getintouch.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>9Oceania | Expression of interest</title>
+    <title>9Oceania | Get in touch</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="Template by CocoBasic" />
     <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
@@ -105,7 +105,7 @@
             <div class="contact-container">
                 <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
                     <div class="contact-title">
-                        <h2>Expression of Interest</h2>
+                        <h2>Get in touch</h2>
                         <hr>
                     </div>
                     <input type="hidden" name="access_key" value="36d3e489-94df-4c5a-b981-9d2c7f9351ad">
@@ -113,11 +113,9 @@
                     <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
                     <input type="tel" name="tel" placeholder="Your Number" class="contact-inputs" required>
                     <textarea name="message" placeholder="Your Message" class="contact-inputs textarea" required></textarea>
-                    <label for="resume">Upload your resume</label>
+                    <label for="resume">Upload your file</label>
                     <input type="file" name="attachment" id="attachment" class="contact-inputs" accept=".pdf" required>
-                    <label for="resume">Upload your cover letter</label>
-                    <input type="file" name="attachment" id="attachment" class="contact-inputs" accept=".pdf" required>
-                    <button type="submit">Submit</button>
+                    <button type="submit">Contact Us</button>
                 </form>
             </div>
 
