--- a/services.html
+++ b/services.html
@@ -109,8 +109,8 @@
                             <h2 class="services-heading">Services</h2>
                             <ul class="service-main-list">
                                 <li><a href="#creative-services">Creative</a></li>
-                                <li><a href="#dev-services">Web Development</a></li>
-                                <li><a href="#digital-services">Digital Marketing</a></li>
+                                <li><a href="#dev-services">Web <br> Development</a></li>
+                                <li><a href="#digital-services">Digital <br> Marketing</a></li>
                             </ul>
                         </div>
                     </section>
@@ -133,42 +133,42 @@
                                     <div class="creative-list">
                                         <a href="#"><h4>UX Design</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="creative-icon"><img src="assets/ux-design.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="creative-col">
                                     <div class="creative-list">
                                         <a href="#"><h4>UI Design</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="creative-icon"><img src="assets/ui-design.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="creative-col">
                                     <div class="creative-list">
                                         <a href="#"><h4>Digital Design</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="creative-icon"><img src="assets/digital-design.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="creative-col">
                                     <div class="creative-list">
                                         <a href="#"><h4>Copywriting</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="creative-icon"><img src="assets/copywriting.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="creative-col">
                                     <div class="creative-list">
                                         <a href=""><h4>Branding</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="creative-icon"><img src="assets/branding.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="creative-col">
                                     <div class="creative-list">
                                         <a href="#"><h4>Print Design</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="creative-icon"><img src="assets/print-design.jpeg" alt=""></div>
                                     </div>
                                 </div>
                             </div>
@@ -186,35 +186,35 @@
                                     <div class="dev-list">
                                         <a href="#"><h4>WordPress</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="dev-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="dev-icon"><img src="assets/wordpress.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="dev-col">
                                     <div class="dev-list">
                                         <a href="#"><h4>Webflow</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="dev-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="dev-icon"><img src="assets/webflow.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="dev-col">
                                     <div class="dev-list">
                                         <a href="#"><h4>eCommerce</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="dev-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="dev-icon"><img src="assets/ecommerce.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="dev-col">
                                     <div class="dev-list">
                                         <a href="#"><h4>Shopify</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="dev-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="dev-icon"><img src="assets/shopify.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="dev-col">
                                     <div class="dev-list">
-                                        <a href="#"><h4>WooCommerce</h4></a>
+                                        <a href="#"><h4>WebCommerce</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="dev-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="dev-icon"><img src="assets/webcommerce.jpeg" alt=""></div>
                                     </div>
                                 </div>
                             </div>
@@ -233,28 +233,28 @@
                                     <div class="digital-list">
                                         <a href="#"><h4>Google Advertising</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="digital-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="digital-icon"><img src="assets/google-advertising.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="digital-col">
                                     <div class="digital-list">
                                         <a href="#"><h4>SEO</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="digital-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="digital-icon"><img src="assets/seo.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="digital-col">
                                     <div class="digital-list">
                                         <a href="#"><h4>Paid Social Advertising</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="digital-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="digital-icon"><img src="assets/paid-social-advertising.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="digital-col">
                                     <div class="digital-list">
                                         <a href="#"><h4>Organic Social</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="digital-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="digital-icon"><img src="assets/organic-social.jpeg" alt=""></div>
                                     </div>
                                 </div>
                             </div>
