--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                         <li>
                             <a href="about.html">About us</a>
                         </li>
-                        <li>
-                            <a href="services.html" class="has-submenu">Services <i class="fa-solid fa-angle-right"></i></a>
+                        <li class="dropdownbtn">
+                            <a href="services.html">Services <i class="fa-solid fa-angle-right"></i></a>
                             <div class="service-dropdown">
                                 <div class="service-list">
                                     <ul class="first">
@@ -44,9 +44,6 @@
                                         <li><a class="heading-list" href="#">UX Design</a></li>
                                         <li><a class="heading-list" href="#">UI Design</a></li>
                                         <li><a class="heading-list" href="#">Digital Design</a></li>
-                                        <li><a class="heading-list" href="#">Copywriting</a></li>
-                                        <li><a class="heading-list" href="#">Branding</a></li>
-                                        <li><a class="heading-list" href="#">Print Design</a></li>
                                     </ul>
             
                                     <ul class="second">
@@ -136,7 +133,6 @@
 
                             <div class="swiper-slide">
                                 <section class="about-us">
-                                    <!-- <img src="assets/about.webp" alt=""> -->
                                 </section>
                             </div>
 
