--- a/services.html
+++ b/services.html
@@ -32,8 +32,8 @@
                         <li>
                             <a href="about.html">About us</a>
                         </li>
-                        <li>
-                            <a href="services.html" class="has-submenu">Services <i class="fa-solid fa-angle-right"></i></a>
+                        <li class="dropdownbtn">
+                            <a href="services.html">Services <i class="fa-solid fa-angle-right"></i></a>
                             <div class="service-dropdown">
                                 <div class="service-list">
                                     <ul class="first">
@@ -41,9 +41,6 @@
                                         <li><a class="heading-list" href="#">UX Design</a></li>
                                         <li><a class="heading-list" href="#">UI Design</a></li>
                                         <li><a class="heading-list" href="#">Digital Design</a></li>
-                                        <li><a class="heading-list" href="#">Copywriting</a></li>
-                                        <li><a class="heading-list" href="#">Branding</a></li>
-                                        <li><a class="heading-list" href="#">Print Design</a></li>
                                     </ul>
             
                                     <ul class="second">
@@ -73,8 +70,25 @@
                             <a href="career.html">Careers</a>
                         </li>
                     </ul>
-
+                    <!-- <form role="search" method="get" class="search-form" action="#">
+                        <label>		
+                            <input autocomplete="off" type="search" class="search-field" placeholder="Search" value="" name="s" title="Search for:"> 
+                        </label>    
+                    </form> -->
                 </nav>       
+
+                <!-- <div class="menu-right-text">
+                    <p class="menu-text-title">HELLO</p>
+                    <div class="menu-text">
+                        Welcome to our online art journey. You can read our <a href="blog.html">thoughts</a> or you can simply <a href="contact.html">write to us</a>
+                    </div>
+                    <br>
+                    <br>
+                    <a class="socail-text" href="#">TW.</a>
+                    <a class="socail-text" href="#">FB.</a>
+                    <a class="socail-text" href="#">IN.</a>
+                    <a class="socail-text" href="#">BE.</a>
+                </div> -->
             </div>
         
             <!-- Right Part Sidebar -->
@@ -148,27 +162,6 @@
                                         <a href="#"><h4>Digital Design</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
                                         <div class="creative-icon"><img src="assets/digital-design.jpeg" alt=""></div>
-                                    </div>
-                                </div>
-                                <div class="creative-col">
-                                    <div class="creative-list">
-                                        <a href="#"><h4>Copywriting</h4></a>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><img src="assets/copywriting.jpeg" alt=""></div>
-                                    </div>
-                                </div>
-                                <div class="creative-col">
-                                    <div class="creative-list">
-                                        <a href=""><h4>Branding</h4></a>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><img src="assets/branding.jpeg" alt=""></div>
-                                    </div>
-                                </div>
-                                <div class="creative-col">
-                                    <div class="creative-list">
-                                        <a href="#"><h4>Print Design</h4></a>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><img src="assets/print-design.jpeg" alt=""></div>
                                     </div>
                                 </div>
                             </div>
