--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
                         <li>
                             <a href="about.html">About us</a>
                         </li>
-                        <li>
-                            <a href="services.html" class="has-submenu">Services <i class="fa-solid fa-angle-right"></i></a>
+                        <li class="dropdownbtn">
+                            <a href="services.html">Services <i class="fa-solid fa-angle-right"></i></a>
                             <div class="service-dropdown">
                                 <div class="service-list">
                                     <ul class="first">
@@ -41,9 +41,6 @@
                                         <li><a class="heading-list" href="#">UX Design</a></li>
                                         <li><a class="heading-list" href="#">UI Design</a></li>
                                         <li><a class="heading-list" href="#">Digital Design</a></li>
-                                        <li><a class="heading-list" href="#">Copywriting</a></li>
-                                        <li><a class="heading-list" href="#">Branding</a></li>
-                                        <li><a class="heading-list" href="#">Print Design</a></li>
                                     </ul>
             
                                     <ul class="second">
@@ -73,8 +70,25 @@
                             <a href="career.html">Careers</a>
                         </li>
                     </ul>
-
+                    <!-- <form role="search" method="get" class="search-form" action="#">
+                        <label>		
+                            <input autocomplete="off" type="search" class="search-field" placeholder="Search" value="" name="s" title="Search for:"> 
+                        </label>    
+                    </form> -->
                 </nav>       
+
+                <!-- <div class="menu-right-text">
+                    <p class="menu-text-title">HELLO</p>
+                    <div class="menu-text">
+                        Welcome to our online art journey. You can read our <a href="blog.html">thoughts</a> or you can simply <a href="contact.html">write to us</a>
+                    </div>
+                    <br>
+                    <br>
+                    <a class="socail-text" href="#">TW.</a>
+                    <a class="socail-text" href="#">FB.</a>
+                    <a class="socail-text" href="#">IN.</a>
+                    <a class="socail-text" href="#">BE.</a>
+                </div> -->
             </div>
         
             <!-- Right Part Sidebar -->
