--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                     <ul class="third">
                                         <li><a class="heading" href="#">Digital Marketing</a></li>
                                         <li><a class="heading-list" href="#">Google Advertising</a></li>
-                                        <li><a class="heading-list" href="seo.html">SEO</a></li>
+                                        <li><a class="heading-list" href="#">SEO</a></li>
                                         <li><a class="heading-list" href="#">Paid Social Advertising</a></li>
                                         <li><a class="heading-list" href="#">Organic Social</a></li>
                                     </ul>
@@ -127,7 +127,6 @@
 
                             <div class="swiper-slide">
                                 <section class="home" id="home">
-                                    <h1>Beyond Boundaries <br> Above Trends</h1>
                                 </section>
                             </div>
 
